--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- Vertical Linear Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        >
+
+        <!-- Boiler Image -->
+        <ImageView
+            android:id="@+id/caldeiraImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/caldeira"
+            android:padding="20dp"/>
+
+        <!-- ON/OFF Toggle Buttons -->
+        <ToggleButton
+            android:id="@+id/toggleButton"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            />
+
+
+
+
+
+
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
